# MuleShield-AI

./: .env  .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  muleshield.db  package-lock.json  start_backend.py
ai/: README.md
ai/models/: iforest_anomaly.pkl  xgb_mule_detector.pkl
apps/mobile/: README.md
apps/web/: .env  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/.github/: README.md
apps/web/apps/: README.md
apps/web/databases/: README.md
apps/web/docs/: README.md
apps/web/scripts/: README.md
apps/web/src/: middleware.ts
apps/web/tests/: README.md
backend/docs/: database_architecture.md
backend/services/account-service/: Dockerfile  pyproject.toml
backend/services/auth-service/: Dockerfile  pyproject.toml
backend/services/auth-service/app/: __init__.py  main.py
backend/services/auth-service/app/api/v1/: auth.py
backend/services/auth-service/app/dependencies/: auth.py
backend/services/auth-service/app/models/: auth.py
backend/services/auth-service/app/repository/: auth_repository.py
backend/services/auth-service/app/schemas/: auth.py
backend/services/auth-service/app/services/: auth_service.py
backend/shared/: README.md  pyproject.toml
backend/shared/shared/: celery.py
backend/shared/shared/authentication/: __init__.py  auth.py  jwt.py
backend/shared/shared/config/: __init__.py  settings.py
backend/shared/shared/database/: __init__.py  firestore.py  models.py  mongo.py  neo4j.py  postgres.py  redis.py  transaction.py
backend/shared/shared/exceptions/: __init__.py  handler.py
backend/shared/shared/logging/: __init__.py  logger.py
backend/shared/shared/middleware/: __init__.py  request_log.py
backend/shared/shared/schemas/: __init__.py  responses.py
fixtures/: sample_statement.csv  slice_text_dump.txt
infrastructure/: README.md
monitoring/: README.md
scripts/: check_inr_rows.py  debug_dedupe.py  generate_pdf_fixture.py  generate_synthetic_data.py  test_pdf_parser.py  test_upload.py  test_upload_gateway.py  train_ml_models.py
services/: README.md
services/admin-service/: README.md  pyproject.toml
services/api-gateway/: pyproject.toml
services/auth-service/: README.md  pyproject.toml
services/case-management-service/: README.md
services/ingestion-service/: README.md
services/monitoring-service/: README.md  pyproject.toml
services/reporting-service/: Dockerfile  pyproject.toml
tests/: test_feature_slice.py
(+169 files in other folders)
