[tool.poetry]
name = "muleshield-shared"
version = "0.1.0"
description = "Enterprise Shared Library for MuleShield AI microservices"
authors = ["MuleShield AI Architecture Team"]
readme = "README.md"
packages = [{include = "shared"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.111.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
structlog = "^24.1.0"
sqlalchemy = "^2.0.29"
motor = "^3.4.0"
redis = "^5.0.3"
neo4j = "^5.18.0"
pyjwt = {version = "^2.8.0", extras = ["crypto"]}
cryptography = "^42.0.5"
bcrypt = "^4.1.2"
python-multipart = "^0.0.9"
uvicorn = "^0.29.0"
colorama = "^0.4.6"
firebase-admin = "^6.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
black = "^24.3.0"
ruff = "^0.3.4"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "T20", "RET", "SIM", "ARG", "PTH", "ERA", "RUF"]
ignore = ["S101", "D100", "D104"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["shared"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
exclude = ["tests/"]
