[tool.poetry]
name = "monitoring-service"
version = "0.1.0"
description = "FastAPI microservice for monitoring-service in MuleShield AI"
authors = ["MuleShield AI Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.99.0"
uvicorn = "^0.22.0"
pydantic = "^2.0"
sqlalchemy = "^2.0.17"
motor = "^3.1.2"
redis = "^4.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
