[tool.poetry]
name = "auth-service"
version = "0.1.0"
description = "FastAPI microservice for auth-service in MuleShield AI"
authors = ["MuleShield AI Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
pydantic = "^2.7.0"
muleshield-shared = {path = "../../shared", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.3.0"
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
